fix: padding on small screens

--- a/src/ui/pages/ConnectionDetails/components/ConnectionDetailsInfoBlock.scss
+++ b/src/ui/pages/ConnectionDetails/components/ConnectionDetailsInfoBlock.scss
@@ -11,7 +11,7 @@
     padding: 1.25rem;
 
     &:not(:last-child) {
-      margin-bottom: 10px;
+      margin-bottom: 0.625rem;
     }
 
     .connection-details-info-block-line {
@@ -57,8 +57,12 @@
     }
 
     .connection-details-info-block-inner {
-      padding: 0.45rem 0.8rem;
+      padding: 1rem;
       border-radius: 0.75rem;
+
+      &:not(:last-child) {
+        margin-bottom: 0.5rem;
+      }
     }
   }
 }
